fix background color and margin spacing.

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ h1{
 body {
     font-family: 'Helvetica Neue Light';
     font-weight: 100;
-    background-color: #FCFCFC;
+    background-color: #ecebea;
     color: #111111;
     font-size: 1.5rem;
     width: 90%;
